# battleship-

./: .gitignore  CMakeLists.txt  Doxyfile
src/: CMakeLists.txt
src/bsgl/: CMakeLists.txt  board.cpp  board.h  server.cpp  ships.cpp  ships.h
tests/: CMakeLists.txt
